--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,12 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok"
 
     implementation 'org.springframework.boot:spring-boot-starter'
+
+//  implementation 'org.springframework:spring-tx'
+//  implementation 'org.springframework:spring-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'com.h2database:h2'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
