--- a/build.gradle
+++ b/build.gradle
@@ -13,19 +13,24 @@ repositories {
 }
 
 dependencies {
+
+    implementation 'org.springframework.boot:spring-boot-starter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
     implementation "org.projectlombok:lombok"
     annotationProcessor "org.projectlombok:lombok"
 
-    implementation 'org.springframework.boot:spring-boot-starter'
-
+//  its included by spring-boot-starter-data-jpa
 //  implementation 'org.springframework:spring-tx'
 //  implementation 'org.springframework:spring-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+    runtimeOnly 'com.h2database:h2'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+
 }
 
 tasks.named('test') {
